--- a/tensors.ipynb
+++ b/tensors.ipynb
@@ -88,6 +88,43 @@
   },
   {
    "source": [
+    "# Basic array manipulations"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Flipped Up/Down 2D Shape: (3, 4) 2D Strides: (-16, 4)\n[[  9  10  11  12]\n [  5   6   7   8]\n [100   2   3   4]]\nFlipped Left/Right 2D Shape: (3, 4) 2D Strides: (16, -4)\n[[  4   3   2 100]\n [  8   7   6   5]\n [ 12  11  10   9]]\nFull Flip 2D Shape: (3, 4) 2D Strides: (-16, -4)\n[[ 12  11  10   9]\n [  8   7   6   5]\n [  4   3   2 100]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "flipped = np.flip(a, axis=0) # np.flipud(a)\n",
+    "assert np.shares_memory(a, flipped)\n",
+    "print('Flipped Up/Down 2D Shape: {} 2D Strides: {}'.format(flipped.shape, flipped.strides))\n",
+    "print(flipped)\n",
+    "\n",
+    "flipped = np.flip(a, axis=1) # np.fliplr(a)\n",
+    "assert np.shares_memory(a, flipped)\n",
+    "print('Flipped Left/Right 2D Shape: {} 2D Strides: {}'.format(flipped.shape, flipped.strides))\n",
+    "print(flipped)\n",
+    "\n",
+    "flipped = np.flip(a, axis=None)\n",
+    "assert np.shares_memory(a, flipped)\n",
+    "print('Full Flip 2D Shape: {} 2D Strides: {}'.format(flipped.shape, flipped.strides))\n",
+    "print(flipped)"
+   ]
+  },
+  {
+   "source": [
     "# Basis reshape operations\n",
     "\n",
     "Reshape is immutable\n",
@@ -255,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
