--- a/graph.ipynb
+++ b/graph.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.7-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -24,34 +24,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "TensorFlow version:  2.4.1\n"
+      "TensorFlow version:  2.4.1\n",
+      "Executing op Add in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op SummaryWriter in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op CreateSummaryFileWriter in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op DestroyResourceOp in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op __inference_my_func_71 in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op LogicalAnd in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op Identity in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op WriteSummary in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op FlushSummaryWriter in device /job:localhost/replica:0/task:0/device:CPU:0\n"
      ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
     "print(\"TensorFlow version: \", tf.__version__)\n",
+    "tf.debugging.set_log_device_placement(True)\n",
     "\n",
     "logdir = './logs/func'\n",
     "writer = tf.summary.create_file_writer(logdir)\n",
     "\n",
+    "# The function to be traced.\n",
     "@tf.function\n",
-    "def my_func(x, y):\n",
-    "    tf.matmul(x, y)\n",
+    "def my_func(xm, y):\n",
+    "    return tf.matmul(xm, y)\n",
     "\n",
-    "x = tf.constant([[1,2], [3,4]], dtype=tf.float32)\n",
-    "y = tf.constant([[0, 10], [0, 0.5]], dtype=tf.float32)\n",
+    "A = tf.constant([[1,2], [3,4]], dtype=tf.float32, name='A')\n",
+    "x = tf.constant([[0, 10], [0, 0.5]], dtype=tf.float32, name='x')\n",
     "\n",
+    "# Bracket the function call with\n",
+    "# tf.summary.trace_on() and tf.summary.trace_export().\n",
     "tf.summary.trace_on(graph=True, profiler=True)\n",
     "\n",
-    "z = my_func(x, y)\n",
+    "# tf.matmul(A, x)\n",
+    "z = my_func(A, x)\n",
     "with writer.as_default():\n",
     "    tf.summary.trace_export(\n",
     "        name='my_func',\n",
@@ -62,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +89,7 @@
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "Reusing TensorBoard on port 6006 (pid 29176), started 0:00:56 ago. (Use '!kill 29176' to kill it.)"
+      "text/plain": "Reusing TensorBoard on port 6006 (pid 47426), started 2:00:12 ago. (Use '!kill 47426' to kill it.)"
      },
      "metadata": {}
     }
