--- a/linreg.ipynb
+++ b/linreg.ipynb
@@ -10,13 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2-final"
+   "version": "3.8.5-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "display_name": "Python 3.8.5 64-bit ('venv')",
+   "metadata": {
+    "interpreter": {
+     "hash": "b03cdb3e8540ec837d1298ff318e6b1e263f37eac52553cd133d0f2651fd34cc"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -24,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -34,7 +38,8 @@
      "name": "stdout",
      "text": [
       "TensorFlow version:  2.4.1\n",
-      "m: 0.421551, b: 1.487340\n"
+      "WARNING:tensorflow:Trace already enabled\n",
+      "m: 0.416172, b: 1.491044\n"
      ]
     }
    ],
@@ -51,8 +56,6 @@
     "bias = 1.5\n",
     "rows = 100\n",
     "\n",
-    "learning_rate = 0.05\n",
-    "steps = 400\n",
     "\n",
     "x_train = tf.random.uniform(shape=(rows,))\n",
     "perturb = tf.random.normal(shape=(len(x_train),), stddev=0.01)\n",
@@ -61,45 +64,43 @@
     "m = tf.Variable(0.)\n",
     "b = tf.Variable(0.)\n",
     "\n",
-    "# @tf.function\n",
     "def predict_y_value(x):\n",
     "    y = m * x + b\n",
     "    return y\n",
     "\n",
-    "# @tf.function\n",
+    "@tf.function\n",
     "def squared_error(y_pred, y_true):\n",
     "    return tf.reduce_mean(tf.square(y_pred - y_true))\n",
     "\n",
-    "# tf.summary.trace_on(graph=True, profiler=True)\n",
+    "learning_rate = 0.05\n",
+    "steps = 400\n",
     "\n",
-    "for epoch in range(steps):\n",
-    "    with tf.GradientTape() as tape:\n",
-    "        predictions = predict_y_value(x_train)\n",
-    "        loss = squared_error(predictions, y_train)\n",
+    "# Bracket the loss function call - squared_error() - with\n",
+    "# tf.summary.trace_on() ans tf.summary.trace_export()\n",
+    "tf.summary.trace_on(graph=True, profiler=False)\n",
     "\n",
-    "    gradients = tape.gradient(loss, [m, b])\n",
-    "    m.assign_sub(gradients[0] * learning_rate)\n",
-    "    b.assign_sub(gradients[1] * learning_rate)\n",
+    "with writer.as_default():\n",
+    "    for epoch in range(steps):\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            predictions = predict_y_value(x_train)\n",
+    "            loss = squared_error(predictions, y_train)\n",
+    "            tf.summary.scalar('loss', loss, step=epoch)\n",
     "\n",
-    "    with writer.as_default():\n",
-    "        tf.summary.scalar('training loss', loss, step=epoch+1)\n",
-    "        writer.flush()\n",
+    "            gradients = tape.gradient(loss, [m, b])\n",
+    "            m.assign_sub(gradients[0] * learning_rate)\n",
+    "            b.assign_sub(gradients[1] * learning_rate)\n",
+    "\n",
+    "    tf.summary.trace_export(name='mse_loss',\n",
+    "                            step=0,\n",
+    "                            profiler_outdir=logdir)\n",
     "    \n",
-    "    # writer.flush()\n",
     "\n",
-    "print(\"m: %f, b: %f\" % (m.numpy(), b.numpy()) )\n",
-    "\n",
-    "# with writer.as_default():\n",
-    "#     tf.summary.trace_export(\n",
-    "#         name='linreg',\n",
-    "#         step=0,\n",
-    "#         profiler_outdir=logdir\n",
-    "#     )"
+    "print(\"m: %f, b: %f\" % (m.numpy(), b.numpy()) )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +113,7 @@
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "Reusing TensorBoard on port 6006 (pid 85331), started 12:23:15 ago. (Use '!kill 85331' to kill it.)"
+      "text/plain": "Reusing TensorBoard on port 6006 (pid 31200), started 0:08:42 ago. (Use '!kill 31200' to kill it.)"
      },
      "metadata": {}
     }
