--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -28,14 +28,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "tensorflow version: 2.4.1\nNum GPU Available:  1\n/device:GPU:0\n"
+      "tensorflow version: 2.4.1\n",
+      "Num GPU Available:  1\n",
+      "/device:GPU:0\n"
      ]
     }
    ],
@@ -227,6 +229,13 @@
    ]
   },
   {
+   "source": [
+    "# Test accuracy"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -248,7 +257,7 @@
   },
   {
    "source": [
-    "## Make predictions\n",
+    "# Make predictions\n",
     "The model's linear outputs, logits. Attach a softmax layer to convert the logits to probalities, which are easy to interpret"
    ],
    "cell_type": "markdown",
@@ -283,6 +292,57 @@
     "predictions = probability_model.predict(test_images)  \n",
     "print(predictions[0])\n",
     "np.argmax(predictions[0])\n"
+   ]
+  },
+  {
+   "source": [
+    "# Verify predictions"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-b47c56cb8d23>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0mplot_image\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_images\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def plot_image(i, predictions_array, true_label, img):\n",
+    "    true_label, img = true_label[i], img[i]\n",
+    "    plt.grid(False)\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
+    "\n",
+    "    plt.imshow(img, cmap=plt.cm.binary)\n",
+    "\n",
+    "    predicted_label = np.argmax(predictions_array)\n",
+    "    if predicted_label == true_label:\n",
+    "        color = 'blue'\n",
+    "    else:\n",
+    "        color = 'red'\n",
+    "\n",
+    "    plt.xlabel(\"{} {:2.0f}% ({})\".format(class_names[predicted_label],\n",
+    "                                        100*np.max(predictions_array),\n",
+    "                                        class_names[true_label],\n",
+    "                                        color=color))\n",
+    "\n",
+    "i = 0\n",
+    "plt.figure(figsize=(6, 3))\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plot_image(i, predictions[i], test_labels, test_images)\n",
+    "plt.show()"
    ]
   },
   {
