--- a/colab_hint1.ipynb
+++ b/colab_hint1.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "colab_hint1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPRne574klWglQaO6BLM3/A",
+      "authorship_tag": "ABX9TyPOpieJo1pgx6wa2vZDAwdp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,15 +32,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_XXmPUTSCzPw",
-        "outputId": "5e70499e-6c4f-4f59-de8a-e87db8600fc5"
+        "outputId": "504f1189-2014-427f-a7be-d6f13a86b225"
       },
       "source": [
         "import tensorflow as tf\n",
+        "import numpy as np\n",
+        "\n",
         "print(\"TF version: {}\".format(tf.__version__))\n",
         "print(\"GPU Available: \", len(tf.config.experimental.list_physical_devices('GPU')))\n",
-        "print(tf.test.gpu_device_name())"
+        "print(tf.test.gpu_device_name())\n"
       ],
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -48,6 +50,278 @@
             "TF version: 2.4.1\n",
             "GPU Available:  0\n",
             "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gq1XVzjcGb9t"
+      },
+      "source": [
+        "Prepare the data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q4YJyp6NGfES"
+      },
+      "source": [
+        "x_train = np.arange(0.0, 5.0, 0.1, dtype='float32')\n",
+        "perturb = tf.random.normal(shape=(len(x_train), ), stddev=0.01)\n",
+        "y_train = 5 * x_train ** 2"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p5P5Mxd0GFBG"
+      },
+      "source": [
+        "Prepare the model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3JqK0SgRF5XD",
+        "outputId": "58592fcd-97cb-46d3-9eac-247bc1bdb7b4"
+      },
+      "source": [
+        "from tensorflow import keras\n",
+        "model = keras.Sequential([\n",
+        "  keras.layers.Dense(1) # output layer that returns a single, continuos value                        \n",
+        "])\n",
+        "model.compile(loss=keras.losses.mean_squared_error,\n",
+        "              optimizer=keras.optimizers.SGD(lr=0.01))\n",
+        "model.fit(x_train, y_train,\n",
+        "          verbose=True,\n",
+        "          epochs=100)\n",
+        "model.summary()"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/100\n",
+            "2/2 [==============================] - 1s 6ms/step - loss: 3171.7491\n",
+            "Epoch 2/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 1400.7232\n",
+            "Epoch 3/100\n",
+            "2/2 [==============================] - 0s 3ms/step - loss: 755.8168\n",
+            "Epoch 4/100\n",
+            "2/2 [==============================] - 0s 3ms/step - loss: 462.1272\n",
+            "Epoch 5/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 354.9431\n",
+            "Epoch 6/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 283.4362\n",
+            "Epoch 7/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 269.9422\n",
+            "Epoch 8/100\n",
+            "2/2 [==============================] - 0s 3ms/step - loss: 249.1602\n",
+            "Epoch 9/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 253.6303\n",
+            "Epoch 10/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 237.3606\n",
+            "Epoch 11/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 218.6807\n",
+            "Epoch 12/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 215.4074\n",
+            "Epoch 13/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 213.0518\n",
+            "Epoch 14/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 212.3347\n",
+            "Epoch 15/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 211.7507\n",
+            "Epoch 16/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 207.0024\n",
+            "Epoch 17/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 199.2187\n",
+            "Epoch 18/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 198.1543\n",
+            "Epoch 19/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 211.1536\n",
+            "Epoch 20/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 194.1921\n",
+            "Epoch 21/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 206.9830\n",
+            "Epoch 22/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 201.0466\n",
+            "Epoch 23/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 200.7288\n",
+            "Epoch 24/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 199.2819\n",
+            "Epoch 25/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 188.9613\n",
+            "Epoch 26/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 184.4760\n",
+            "Epoch 27/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 191.7203\n",
+            "Epoch 28/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 193.0969\n",
+            "Epoch 29/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 174.0089\n",
+            "Epoch 30/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 177.8119\n",
+            "Epoch 31/100\n",
+            "2/2 [==============================] - 0s 3ms/step - loss: 167.5563\n",
+            "Epoch 32/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 182.7212\n",
+            "Epoch 33/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 181.6183\n",
+            "Epoch 34/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 170.3398\n",
+            "Epoch 35/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 177.9216\n",
+            "Epoch 36/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 171.5669\n",
+            "Epoch 37/100\n",
+            "2/2 [==============================] - 0s 3ms/step - loss: 177.1103\n",
+            "Epoch 38/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 176.1510\n",
+            "Epoch 39/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 163.3189\n",
+            "Epoch 40/100\n",
+            "2/2 [==============================] - 0s 8ms/step - loss: 156.6431\n",
+            "Epoch 41/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 165.9968\n",
+            "Epoch 42/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 159.6704\n",
+            "Epoch 43/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 152.2173\n",
+            "Epoch 44/100\n",
+            "2/2 [==============================] - 0s 9ms/step - loss: 158.5248\n",
+            "Epoch 45/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 151.1131\n",
+            "Epoch 46/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 155.3961\n",
+            "Epoch 47/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 146.9355\n",
+            "Epoch 48/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 149.7555\n",
+            "Epoch 49/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 146.2412\n",
+            "Epoch 50/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 154.4636\n",
+            "Epoch 51/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 152.2988\n",
+            "Epoch 52/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 144.8200\n",
+            "Epoch 53/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 134.6572\n",
+            "Epoch 54/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 150.9150\n",
+            "Epoch 55/100\n",
+            "2/2 [==============================] - 0s 8ms/step - loss: 146.3977\n",
+            "Epoch 56/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 148.3822\n",
+            "Epoch 57/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 137.1983\n",
+            "Epoch 58/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 144.4747\n",
+            "Epoch 59/100\n",
+            "2/2 [==============================] - 0s 7ms/step - loss: 146.9241\n",
+            "Epoch 60/100\n",
+            "2/2 [==============================] - 0s 9ms/step - loss: 138.0279\n",
+            "Epoch 61/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 135.7114\n",
+            "Epoch 62/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 137.4845\n",
+            "Epoch 63/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 143.2642\n",
+            "Epoch 64/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 126.5258\n",
+            "Epoch 65/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 138.6069\n",
+            "Epoch 66/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 132.3336\n",
+            "Epoch 67/100\n",
+            "2/2 [==============================] - 0s 3ms/step - loss: 131.7550\n",
+            "Epoch 68/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 128.1760\n",
+            "Epoch 69/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 128.6159\n",
+            "Epoch 70/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 131.1458\n",
+            "Epoch 71/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 132.3580\n",
+            "Epoch 72/100\n",
+            "2/2 [==============================] - 0s 7ms/step - loss: 127.3574\n",
+            "Epoch 73/100\n",
+            "2/2 [==============================] - 0s 3ms/step - loss: 133.0052\n",
+            "Epoch 74/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 124.0047\n",
+            "Epoch 75/100\n",
+            "2/2 [==============================] - 0s 14ms/step - loss: 131.0782\n",
+            "Epoch 76/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 118.1009\n",
+            "Epoch 77/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 115.1325\n",
+            "Epoch 78/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 125.5212\n",
+            "Epoch 79/100\n",
+            "2/2 [==============================] - 0s 3ms/step - loss: 119.0586\n",
+            "Epoch 80/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 121.8756\n",
+            "Epoch 81/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 126.7508\n",
+            "Epoch 82/100\n",
+            "2/2 [==============================] - 0s 8ms/step - loss: 121.7764\n",
+            "Epoch 83/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 116.9779\n",
+            "Epoch 84/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 123.0959\n",
+            "Epoch 85/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 119.9653\n",
+            "Epoch 86/100\n",
+            "2/2 [==============================] - 0s 9ms/step - loss: 119.5648\n",
+            "Epoch 87/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 115.9793\n",
+            "Epoch 88/100\n",
+            "2/2 [==============================] - 0s 7ms/step - loss: 117.8925\n",
+            "Epoch 89/100\n",
+            "2/2 [==============================] - 0s 7ms/step - loss: 115.3813\n",
+            "Epoch 90/100\n",
+            "2/2 [==============================] - 0s 8ms/step - loss: 115.6465\n",
+            "Epoch 91/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 111.9354\n",
+            "Epoch 92/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 117.9191\n",
+            "Epoch 93/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 116.6737\n",
+            "Epoch 94/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 105.6128\n",
+            "Epoch 95/100\n",
+            "2/2 [==============================] - 0s 6ms/step - loss: 120.1445\n",
+            "Epoch 96/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 116.9941\n",
+            "Epoch 97/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 117.5902\n",
+            "Epoch 98/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 107.1786\n",
+            "Epoch 99/100\n",
+            "2/2 [==============================] - 0s 5ms/step - loss: 116.8733\n",
+            "Epoch 100/100\n",
+            "2/2 [==============================] - 0s 4ms/step - loss: 106.1576\n",
+            "Model: \"sequential_4\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "dense_2 (Dense)              (None, 1)                 2         \n",
+            "=================================================================\n",
+            "Total params: 2\n",
+            "Trainable params: 2\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
           ],
           "name": "stdout"
         }
